--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ body {
 
 img {
     display: block;
-    width: 100%;
     height: auto;
 }
 
@@ -36,14 +35,34 @@ h1, h2, h3 {
     line-height: 4rem;
 }
 
+h1 {
+    font-size: 3.4rem;
+}
+
+h2 {
+    font-size: 3rem;
+}
+
+h3 {
+    font-size: 2.4rem;
+}
+
+p {
+    font-size: 1.6rem;
+    line-height: 2.4rem;
+    margin: 10px 0;
+}
+
 /* Utilities */
 
 .btn {
-    padding: 10px 30px;
-    font-size: 1.6rem;
+    padding: 15px 30px;
+    font-size: 2rem;
     border-radius: 5px;
     border: 1px solid #28a745;
     color: #fff;
+
+    transition: background-color 0.15s, border 0.15s, transform 0.15s;
 }
 
 .btn:hover {
@@ -53,26 +72,46 @@ h1, h2, h3 {
 
 .btn:active {
     background-color: #31c654;
+    transform: scale(1.1);
+}
+
+.offscreen {
+    position: relative;
+    left: -10000px;
 }
 
 /* Navbar Styles */
 
 .navbar {
     display: flex;
-    justify-content: flex-end;
-    margin-right: 20px;
-    height: 10%;
+    justify-content: space-between;
+    padding: 0 20px;
+    height: auto;
+    width: 100%;
 }
 
-.navbar-links {
+.navbar .logo {
+    font-size: 3rem;
+    margin: 10px;
+    cursor: pointer;
+}
+
+.navbar .logo a {
+    color: #fff;
+}
+
+.navbar-links ul {
     display: flex;
+    text-align: center;
 }
 
 .navbar-links a {
     display: block;
     padding: 20px;
-    font-size: 1.6rem;
+    font-size: 2rem;
     color: #fff;
+
+    transition: transform 0.15s;
 }
 
 .navbar-links a:hover {
@@ -81,7 +120,30 @@ h1, h2, h3 {
 
 .navbar-links a:active {
     border-bottom: 2px solid #31c654;
+    transform: scale(1.1);
 }
+
+/* Hamburger Menu */
+
+.toggle-button {
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+}
+
+.toggle-button .bar {
+    height: 3px;
+    width: 100%;
+    background-color: white;
+    border-radius: 10px;
+}
+
+/* Hero Styles */
 
 .hero {
     height: 100vh;
@@ -94,21 +156,99 @@ h1, h2, h3 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 90%;
+    height: 100%;
     text-align: center;
     margin: 0 20px;
 }
 
 .hero-title {
-    font-size: clamp(3rem, 5vh, 5rem);
+    font-size: clamp(3rem, 10vw, 7rem); /* Adjust the values as needed */
 }
 
 .hero-subtitle {
-    font-size: 3rem;
+    margin: 20px 0;
+    font-size: clamp(1.5rem, 3vh, 5rem);
 }
 
-@media screen and (max-width: 500px) {
-    .navbar {
-        justify-content: center;
+/* About */
+
+#about {
+    text-align: center;
+    margin: 30px 0 15px;
+    display: flex;
+    flex-direction: column;
+}
+
+#about .about-title {
+    margin-top: 50px;
+}
+
+#about h2 {
+    font-size: clamp(3rem, 5vh, 5rem);
+    margin-bottom: 30px;
+}
+
+#about .about-content {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    margin: auto;
+    max-width: 1180px;
+
+}
+
+#about .about-content .about-profile-pic img {
+    width: 100%;
+}
+
+#about .about-content .about-profile-content {
+    margin: 0 20px;
+    text-align: left;
+}
+
+#about .about-content .about-profile-content p {
+    margin-bottom: 20px;
+    font-size: 2rem;
+}
+
+@media (max-width: 500px) {
+    .toggle-button {
+        display: flex;
     }
+    
+    .navbar {
+        flex-direction: column;
+        background-color: rgba(0, 0, 0, 0.5);
+        padding: 0;
+    }
+
+    .navbar-links {
+        display: none;
+    }
+
+    .navbar-links ul {
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .navbar-links a {
+        padding: 0.5rem 1rem;
+    }
+
+    .navbar-links a:hover {
+        border: none;
+        width: 100%;
+    }
+
+    .navbar-links li:hover {
+        background-color: #444;
+        width: 100%;
+        text-align: center;
+    }
+
+    .navbar-links.active {
+        display: flex;
+    }
+
 }
