--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,27 @@ p {
     font-size: clamp(2rem, 4vw, 4.5rem);
 }
 
+/* Skills */
+
+.skills {
+    padding: 30px;
+}
+
+.skills i {
+    background-color: #28a745;
+    color: #fff;
+    padding: 1.6rem;
+    font-size: clamp(2rem, 6vw, 8rem);
+    border-radius: 50%;
+}
+
+.skills figcaption {
+    font-size: clamp(2rem, 4vw, 4.5rem);
+    margin-bottom: 15px;
+}
+
+/* Footer */
+
 #footer {
     display: flex;
     justify-content: space-between;
@@ -186,11 +207,16 @@ p {
     background-color: #28a745;
     color: #fff;
     height: auto;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 #footer .footer-icons i {
     color: #fff;
     margin: 20px;
+
+    transition: transform 0.15s;
 }
 
 #footer .footer-icons i:hover {
