--- a/css/style.css
+++ b/css/style.css
@@ -334,7 +334,7 @@ p {
 #projects {
   min-height: 200vh;
   background-color: #111;
-  scroll-margin-top: 15rem;
+  /* scroll-margin-top: 15rem; */
 }
 
 .projects-showcase {
@@ -352,14 +352,16 @@ p {
   padding-bottom: 10rem;
   background-color: #111;
   color: #fff;
-  /* box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5); */
-  box-shadow: inset 0px -3px 0px 0px #222;
+  box-shadow: 1px 1px 10px #222;
+  /* box-shadow: inset 0px -3px 0px 0px #222; */
 }
 
 .projects-showcase .nc-news .nc-news-info {
   display: flex;
   width: 100%;
-  padding-bottom: 30px;
+  padding-bottom: 10px;
+  margin-bottom: 30px;
+  /* box-shadow: 1px 1px 15px #222; */
 }
 
 .projects-showcase .nc-news .project-paragraphs {
