--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,10 @@ p {
   padding-top: 10rem;
 }
 
+.project-section {
+  
+}
+
 /* Navbar Styles */
 
 .navbar {
@@ -352,8 +356,8 @@ p {
   padding-bottom: 10rem;
   background-color: #111;
   color: #fff;
-  box-shadow: 1px 1px 10px #222;
-  /* box-shadow: inset 0px -3px 0px 0px #222; */
+  /* box-shadow: 1px 1px 10px #222; */
+  box-shadow: inset 0px -3px 0px 0px #222;
 }
 
 .projects-showcase .nc-news .nc-news-info {
