--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,7 @@ p {
 .skills figure {
   flex-basis: 20%;
   margin: 10px;
-  padding: 10px;
+  padding: 3rem;
 }
 
 .skills figure img {
@@ -317,9 +317,8 @@ p {
 /* Projects */
 
 #projects {
-  min-height: 200vh;
   background-color: #111;
-  /* scroll-margin-top: 15rem; */
+  margin-bottom: 5rem;
 }
 
 .projects-showcase {
@@ -345,13 +344,15 @@ p {
   width: 100%;
   padding-bottom: 10px;
   margin-bottom: 30px;
+  justify-content: space-evenly;
+  align-items: center;
   /* box-shadow: 1px 1px 15px #222; */
 }
 
 .projects-showcase .project-paragraphs {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 45%;
   font-size: clamp(1.6rem, 2vw, 2rem);
   justify-content: center;
   padding: 1rem;
@@ -361,16 +362,21 @@ p {
   padding-top: 1rem;
   font-size: 1.5rem;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: flex-start;
+  gap: 3rem;
   align-items: center;
 }
 
 .projects-showcase figure {
-  width: 45%;
+  width: 50%;
 }
 
 .projects-showcase figure a:focus {
   outline: none;
+}
+
+.projects-showcase .phone-figure {
+  width: 20%;
 }
 
 .projects-showcase .project-img {
@@ -386,10 +392,17 @@ p {
 
 .tech-stack {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  max-width: 900px;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
 }
 
 .tech-stack h3 {
   padding-bottom: 5rem;
+  text-align: center;
 }
 
 .project-icons {
@@ -397,10 +410,13 @@ p {
   justify-content: space-evenly;
   align-items: center;
   text-align: center;
+  flex-wrap: wrap;
 }
 
 .project-icons figure {
-  flex-basis: 15%;
+  flex-basis: 20%;
+  margin: 10px;
+  padding: 10px;
 }
 
 .project-icons img {
