--- a/css/mobile.css
+++ b/css/mobile.css
@@ -46,6 +46,7 @@
 
   /* Hero Styles */
   .hero-title {
+    margin-top: 5rem;
     font-size: clamp(
       2.5rem,
       8vw,
@@ -87,6 +88,10 @@
   }
 
   /* Projects */
+
+  #projects {
+    margin-bottom: 0;
+  }
   
   .project-section {
     padding: 0;
@@ -124,35 +129,7 @@
   /* Footer */
 
   #footer {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    font-size: 1rem;
-    font-weight: bold;
-    padding: 0 20px;
-    background-color: #28a745;
-    color: #fff;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+    position: static;
   }
 
-  #footer .footer-social-icons {
-    display: flex;
-  }
-
-  #footer i {
-    color: #fff;
-    margin: 20px;
-    transition: transform 0.15s;
-  }
-
-  #footer i:hover {
-    transform: scale(1.1);
-    cursor: pointer;
-  }
-
-  #footer .footer-social-icons i:active {
-    opacity: 0.8;
-  }
 }
