changes font size on project icon figcaptions

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -133,6 +133,10 @@
     padding: 10px;
   }
 
+  .project-icons figure figcaption {
+    font-size: 1.2rem;
+  }
+
   .project-icons img {
     width: 100%;
   }
