--- a/css/mobile.css
+++ b/css/mobile.css
@@ -45,6 +45,11 @@
   }
 
   /* Hero Styles */
+
+  .hero-content {
+    margin-top: 7.5rem;
+  }
+
   .hero-title {
     margin-top: 5rem;
     font-size: 2.5rem;
