--- a/css/mobile.css
+++ b/css/mobile.css
@@ -54,13 +54,7 @@
   } */
 
   .hero-title {
-    margin-top: 5rem;
-    font-size: 2.5rem;
-    z-index: -1;
-  }
-
-  .hero-subtitle {
-    font-size: 2rem;
+    font-size: clamp(3rem, 10vw, 7rem);
   }
 
   .hero-content .btn {
@@ -205,9 +199,12 @@
 
   .navbar {
     flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: #000;
     padding: 0;
     height: auto;
+    z-index: 1;
+    position: sticky;
+    width: 100%;
   }
 
   .navbar-links {
@@ -237,20 +234,6 @@
 
   .navbar-links.active {
     display: flex;
-  }
-
-  /* Hero Styles */
-  .hero-title {
-    margin-top: 5rem;
-    font-size: clamp(
-      2.5rem,
-      8vw,
-      6rem
-    ); /* Adjust font size for smaller screens */
-  }
-
-  .hero-subtitle {
-    font-size: clamp(1.8rem, 4vw, 3.5rem);
   }
 
   /* About */
