--- a/css/mobile.css
+++ b/css/mobile.css
@@ -81,6 +81,10 @@
     margin-bottom: 20px;
   }
 
+  .about-info .about-info-content .profile-pic {
+    border: none;
+  }
+
   /* Skills */
 
   .skills {
